src/objects/MUSW__License2__c.object
<CustomObject>
    <description>Authorization for a person or facility to perform a function for a period of time: business, profession or privilege</description>
    <fields>
        <fullName>AIDS_Affidavit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether applicant has supplied AIDS affidavit.</description>
        <label>AIDS Affidavit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AQB_Approval_Expiration_Date__c</fullName>
        <label>AQB Approval Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>MUSW__Primary_Licensee__r.Email__c</description>
        <formula>MUSW__Primary_Licensee__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Address__c</fullName>
        <description>Additional address field to store additional address associated with a credential, ex-branch office address, co-owner mailing address, etc.</description>
        <label>Additional Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Fees__c</fullName>
        <label># Advertising Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY() ) - YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <formula>IF(Number_of_Alerts__c &gt; 0 ,IMAGE(&quot;/resource/LnP_Icons/LnP_Icons/stop_Alerts.png&quot;,&quot;&quot;)+&quot;Read Alerts&quot;,&quot;No Alerts&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Clock_Hours_Continuing_Educa__c</fullName>
        <label>Alternate Clock Hours - Continuing Educa</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apartment_Units__c</fullName>
        <label># Apartment Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Validation_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Customer_Envelope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Envelope</label>
        <referenceTo>Customer_Envelope__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Submitted_Date__c</fullName>
        <description>App Submitted Date</description>
        <label>First App Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Full_Name__c</fullName>
        <description>Built for referencing in letters</description>
        <formula>MUSW__Applicant__r.FirstName &amp; &apos; &apos; &amp; MUSW__Applicant__r.MiddleName &amp; &apos; &apos; &amp; MUSW__Applicant__r.LastName</formula>
        <label>Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Status__c</fullName>
        <description>Applicant Status</description>
        <formula>TEXT(MUSW__Applicant__r.Contact_Status__c)</formula>
        <label>Applicant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>Field to store Application Number</description>
        <externalId>true</externalId>
        <label>Application Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Program Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_formatted_number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Application__r.Id ,Application__r.Application_Number__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttestationFullName__c</fullName>
        <description>The name of the person that is attesting to the application.</description>
        <label>AttestationFullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attestation_Date__c</fullName>
        <description>This is the date of the attestation.</description>
        <label>Attestation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the field that shows if the permit is licensed by the applicant.</description>
        <label>Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Completed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Completed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Length_with_hitch__c</fullName>
        <description>to store body length with hitch</description>
        <label>Body Length with Hitch (in feet)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Width_with_hitch__c</fullName>
        <description>to store body width with hitch</description>
        <label>Body Width with Hitch (in feet)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bond_Number__c</fullName>
        <description>This field is created to capture the bond number from the renewal process for license.</description>
        <label>Bond Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <formula>MUSW__Primary_Licensee__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License__c</fullName>
        <description>Business License</description>
        <formula>OR(ISPICKVAL( Credential__c , &apos;Dwelling Contractor&apos;), 
ISPICKVAL( Credential__c , &apos;Dwelling Contractor Restricted&apos;),
ISPICKVAL(Credential__c , &apos;Manufactured Homes Manufacturer&apos;),
ISPICKVAL(Credential__c , &apos;Manufactured Homes Dealer&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Boiler&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Commercial Building&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Elevator&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Fire Suppression/Alarm Systems&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Other&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - Plumbing&apos;),
ISPICKVAL(Credential__c , &apos;Delegated Agent - POWTS&apos;),
ISPICKVAL(Credential__c , &apos;Inspection Agency&apos;),
ISPICKVAL(Credential__c , &apos;UDC Inspection Agency&apos;),
ISPICKVAL(Credential__c , &apos;Funeral Establishment&apos;),
ISPICKVAL(Credential__c , &apos;Prearrangement Funeral Services&apos;),
ISPICKVAL(Credential__c , &apos;Funeral Establishment Branch&apos;),
ISPICKVAL(Credential__c , &apos;Certificate of Removal Registration&apos;),
ISPICKVAL(Credential__c , &apos;Crematory&apos;),
ISPICKVAL(Credential__c , &apos;Cremated Remains Disposition Permit&apos;),
ISPICKVAL(Credential__c , &apos;Cemetery&apos;),
ISPICKVAL(Credential__c , &apos;Camping Resort Company&apos;),
ISPICKVAL(Credential__c , &apos;Appraiser Course&apos;),
ISPICKVAL(Credential__c , &apos;Appraiser Provider&apos;),
ISPICKVAL(Credential__c , &apos;Timeshare Company&apos;),
ISPICKVAL(Credential__c , &apos;Appraisal Management Company&apos;)


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Phone_1__c</fullName>
        <formula>MUSW__Primary_Licensee__r.Email_Primary_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <formula>MUSW__Primary_Licensee__r.Business_Phone__c &amp; &quot; &quot; &amp;  MUSW__Primary_Licensee__r.Extension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Eligible__c</fullName>
        <description>To determine if a credential is CE eligible or not</description>
        <formula>OR(
ISPICKVAL(Credential__c, &quot;UDC HVAC Inspector&quot;), 
ISPICKVAL(Credential__c, &quot;UDC Plumbing Inspector&quot;),
ISPICKVAL(Credential__c, &quot;UDC Electrical Inspector&quot;),
ISPICKVAL(Credential__c, &quot;UDC Construction Inspector&quot;),
ISPICKVAL(Credential__c, &quot;Soil Tester&quot;),
ISPICKVAL(Credential__c, &quot;Manufactured Homes Installer&quot;),
ISPICKVAL(Credential__c, &quot;Dwelling Contractor Qualifier&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Hours_Needed__c</fullName>
        <formula>IF(ISNULL(MUSW__Renewal_Date__c), 0, CE_Hours_per_Cycle__c  -  CE_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Hours Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Roll up summary field from class to show the total of hours</description>
        <label>CE Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Hours_per_Cycle__c</fullName>
        <formula>CASE(Credential__c, &quot;UDC HVAC Inspector&quot;, 24, &quot;UDC Plumbing Inspector&quot;, 24, &quot;UDC Electrical Inspector&quot;, 24, &quot;UDC Construction Inspector&quot;, 24, &quot;Soil Tester&quot;, 12, &quot;Manufactured Homes Installer&quot;, 12, &quot;Dwelling Contractor Qualifier&quot;, 12,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Hours per Cycle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Camping_Resorts__c</fullName>
        <label># Camping Resorts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>for letter in US 2676</description>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Contact_Info__c</fullName>
        <description>Enter phone &amp; extension, website, and/or email in this field</description>
        <label>Catalog Contact Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_Hours_Continuing_Education__c</fullName>
        <label>Clock Hours - Continuing Education</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clock_Hours_Pre_Qualifying__c</fullName>
        <label>Clock Hours - Pre-Qualifying</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clock_Hours_Qualifying_Elective__c</fullName>
        <label>Clock Hours - Qualifying Elective</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clock_Hours__c</fullName>
        <formula>MAX(Clock_Hours_Continuing_Education__c, Clock_Hours_Pre_Qualifying__c, Clock_Hours_Qualifying_Elective__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clock Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_owner_Name__c</fullName>
        <description>To store co-owner name wherever applicable, ex-Manufactured Home Certificate of Title</description>
        <label>Co-owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_owner_Phone__c</fullName>
        <description>To store co-owner phone when a co-owner has been added to the application</description>
        <label>Co-owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community_ID_Number__c</fullName>
        <description>To store community id wherever applicable</description>
        <label>Community ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <description>Name of the Manufactured Home Community if applicable</description>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuing_Education_Licensure_Levels__c</fullName>
        <label>Continuing Education Licensure Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Trainee Appraiser</fullName>
                </value>
                <value>
                    <fullName>State Licensed Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified Residential Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified General Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified General</fullName>
                    <isActive>false</isActive>
                    <label>Certified General</label>
                </value>
                <value>
                    <fullName>Certified Residential</fullName>
                    <isActive>false</isActive>
                    <label>Certified Residential</label>
                </value>
                <value>
                    <fullName>State Licensed</fullName>
                    <isActive>false</isActive>
                    <label>State Licensed</label>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                    <isActive>false</isActive>
                    <label>Trainee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Completion_Date__c</fullName>
        <label>Course Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <label>Course Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <label>Course Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Topic__c</fullName>
        <label>Course Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course_Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Ce_Audit_Eligible__c</fullName>
        <formula>Is_Renewal_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credential Ce Audit Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>This is being used instead of MUSW__Type__c as MUSW__Type__c is a managed field and cannot be changed to be dependent on a global picklist. This refers to the credential type being applied for</description>
        <label>License Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential being applied for</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <formula>MUSW__Primary_Licensee__r.DBA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHP_Stamp_Date__c</fullName>
        <description>1656</description>
        <label>DHP Stamp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOT_Title_Number__c</fullName>
        <description>DOT Title Number</description>
        <label>DOT Title Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVA_Voucher_code__c</fullName>
        <label>DVA Voucher code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Facilities_will_be_ready__c</fullName>
        <description>To store date the facility will be ready</description>
        <label>Date Facilities will be ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>MUSW__Applicant__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dateofbirth_Expiry__c</fullName>
        <formula>DATE(YEAR(TODAY()),MONTH(MUSW__Applicant__r.Birth_Date__c  ), DAY(MUSW__Applicant__r.Birth_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dateofbirth Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distance / On-Line</fullName>
                </value>
                <value>
                    <fullName>One-time event / Seminar</fullName>
                </value>
                <value>
                    <fullName>Ongoing event</fullName>
                </value>
                <value>
                    <fullName>Classroom (Instructor in room with students)</fullName>
                </value>
                <value>
                    <fullName>Substantial course changes to existing active course</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                    <isActive>false</isActive>
                    <label>Classroom</label>
                </value>
                <value>
                    <fullName>On-line (Distance Education)</fullName>
                    <isActive>false</isActive>
                    <label>On-line (Distance Education)</label>
                </value>
                <value>
                    <fullName>Seminar (One-time Events)</fullName>
                    <isActive>false</isActive>
                    <label>Seminar (One-time Events)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_End_Date__c</fullName>
        <label>Deployment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Date__c</fullName>
        <label>Deployment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Bond__c</fullName>
        <description>This field is created to capture the date from license</description>
        <label>Effective Date of Bond</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Applicant/Licensee Email</description>
        <formula>MUSW__Applicant__r.Email</formula>
        <inlineHelpText>Applicant/Licensee Email</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endorsements__c</fullName>
        <label>Endorsements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Land Surveying Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <label>Event City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <label>Event State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedited_Service_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedited Service Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Calculation__c</fullName>
        <formula>IF(ISPICKVAL(Credential_Type__c, &apos;Embalmer&apos;),IF(
AND(
MONTH( Date_of_Birth__c) &gt;MONTH(TODAY()),
DAY(Date_of_Birth__c) + 1 &gt; DAY(TODAY())
),
DATE( YEAR(TODAY()), MONTH( Date_of_Birth__c), DAY(Date_of_Birth__c)),
DATE( YEAR(TODAY())+1, MONTH( Date_of_Birth__c), DAY(Date_of_Birth__c))
),IF(
AND(
MONTH( Date_of_Birth__c) &gt;MONTH(TODAY()),
DAY(Date_of_Birth__c) + 2 &gt; DAY(TODAY())
),
DATE( YEAR(TODAY()), MONTH( Date_of_Birth__c), DAY(Date_of_Birth__c)),
DATE( YEAR(TODAY())+2, MONTH( Date_of_Birth__c), DAY(Date_of_Birth__c))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date Calculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_Bond__c</fullName>
        <inlineHelpText>This field is created to capture the expiration date from license</inlineHelpText>
        <label>Expiration Date of Bond</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Date_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired Date Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>External Source System from which this data is converted</description>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Company_Structure__c</fullName>
        <formula>IF( ISPICKVAL(Application__r.MUSW__Account__r.Business_Structure__c, &apos;LLC&apos;),&apos;LLC&apos;,IF(ISPICKVAL(Application__r.MUSW__Account__r.Business_Structure__c,&apos;Joint Stock Associations&apos;),&apos;Corp&apos;,IF(ISPICKVAL(Application__r.MUSW__Account__r.Business_Structure__c,&apos;Corp&apos;),&apos;Corp&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Company Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Inspection_Audit_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Inspection/Audit Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HUD_1__c</fullName>
        <description>HUD 1- used for data load</description>
        <label>HUD 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_2__c</fullName>
        <description>HUD 2- used for data load</description>
        <label>HUD 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_3__c</fullName>
        <description>HUD 3- used for data load</description>
        <label>HUD 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to hide the record from being displayed in Public Lookup</description>
        <inlineHelpText>Check to hide from Public Look-Up</inlineHelpText>
        <label>Hide From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_to_Contact_the_Course_Provider__c</fullName>
        <label>How to Contact the Course Provider?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone &amp; Extension</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDECC_Approval_Expiration_Date__c</fullName>
        <label>IDECC Approval Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Audit_Selection_Window__c</fullName>
        <formula>MUSW__Expiration_Date__c - 180 &gt;=  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Audit Selection Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Contracts__c</fullName>
        <label># Initial Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_fees__c</fullName>
        <label># Interval fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Late_Renewal_Eligible__c</fullName>
        <description>Formula to determine Late Renewal Eligibility</description>
        <formula>IF((TODAY()&gt;MUSW__Expiration_Date__c &amp;&amp; TODAY()&lt;= Late_Renewal_Eligible_End_Date__c &amp;&amp; (ISPICKVAL(MUSW__Status__c, &apos;Expired&apos;) ||  ISPICKVAL(MUSW__Status__c, &apos;Inactive&apos;) || ISPICKVAL(MUSW__Status__c, &apos;Late Renewal&apos;) || ISPICKVAL(MUSW__Status__c, &apos;Hold&apos;))), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Late Renewal Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_License_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is License Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reinstatement_Eligible__c</fullName>
        <description>Formula to check Reinstatement Eligibility</description>
        <formula>IF(AND(OR((TODAY() &gt; Late_Renewal_Eligible_End_Date__c &amp;&amp; ( ISPICKVAL(MUSW__Status__c, &apos;Canceled&apos;) || ISPICKVAL(MUSW__Status__c, &apos;Inactive&apos;))), 
(AND ( OR (ISPICKVAL(Credential_Type__c, &apos;Temporary Certified General&apos;), ISPICKVAL(Credential_Type__c, &apos;Temporary State Licensed&apos;), ISPICKVAL(Credential_Type__c, &apos;Temporary Certified Residential&apos;)), OR( ISPICKVAL(MUSW__Status__c, &apos;Expired&apos;), ISPICKVAL(MUSW__Status__c, &apos;Active&apos;), ISPICKVAL(MUSW__Status__c, &apos;Canceled&apos;)) ))), 
(NOT(OR(ISPICKVAL(Credential_Type__c, &apos;Funeral Establishment&apos;), ISPICKVAL(Credential_Type__c, &apos;Crematory&apos;), ISPICKVAL(Credential_Type__c, &apos;Certificate of Removal Registration&apos;), ISPICKVAL(Credential_Type__c, &apos;Funeral Establishment Branch&apos;), ISPICKVAL(Credential_Type__c, &apos;Cremated Remains Disposition Permit&apos;))))) 
, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Reinstatement Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal_Eligible__c</fullName>
        <description>Formula to determine renewal eligibility</description>
        <formula>IF(TODAY() &gt;= Renewal_Eligible_Start_Date__c  &amp;&amp; Is_Reinstatement_Eligible__c==False , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_SSN__c</fullName>
        <formula>MUSW__Applicant__r.Last_4_Social__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Renewal_Eligible_End_Date__c</fullName>
        <description>Date until which a credential is eligible for late renewal - based on expiration date and logic from Renewal_Reinstatement_Eligibility__c</description>
        <inlineHelpText>Date until which a credential is eligible for late renewal - based on expiration date and logic from Renewal_Reinstatement_Eligibility__c</inlineHelpText>
        <label>Late Renewal Eligible End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Application</label>
        <referenceTo>MUSW_Application2__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Email__c</fullName>
        <label>License Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>License_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record - Foreign Key used for Data Conversion</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id of the record - Foreign Key used for Data Conversion</inlineHelpText>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>